@@ -1,3 +1,7 @@
+2003-07-20  Alasdair Allan <aa@astro.ex.ac.uk>
+
+         * Build.pm: Added reject_response() and confirm_response()
+                   
 2003-07-16  Alasdair Allan <aa@astro.ex.ac.uk>
 
          * Added filter support
